Forgot to add Trans table :S Changed Trans table to return if depth is smaller than wanted one. I think this is correct :S

--- a/Makefile.common
+++ b/Makefile.common
@@ -75,5 +75,7 @@ LDFLAGS=-Wl,--gc-sections 	\
 				-lSDL2              \
 				-lSDL2_ttf          \
 				-lSDL2_image        \
+				-static-libgcc 			\
+				-static-libstdc++
 
 include Makefile.rules
